--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.7",
+    "array-move": "^3.0.1",
     "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^7.11.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.2"
   },
