--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.21.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "interweave": "^12.8.0",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,7 +25,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-sortable-hoc": "^2.0.0",
-    "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
