--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "interweave": "^12.8.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
+    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
