--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ace-builds": "^1.4.12",
     "antd": "^4.16.7",
     "array-move": "^3.0.1",
     "axios": "^0.21.1",
@@ -18,6 +19,7 @@
     "node-sass": "^6.0.1",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
+    "react-ace": "^9.4.3",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^7.11.1",
