--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "interweave": "^12.8.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "query-string": "^4.3.4",
